# moshi

./: .gcloudignore  .gitignore  .pyenv  CHANGELOG.md  DESIGN.md  Makefile  NOTES.md  README.md  TODO.md  app.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yaml  test.yaml
app/: .gcloudignore  app.yaml  main.py  requirements.txt
chitchat/: __main__.py  conversation.py  main.py  speech2text.py  text2speech.py
code/: pyproject.toml
code/moshi/: main.py  util.py
code/notes/new/: TODO.md
code/scripts/: demo_text_to_speech_google.py
core/: pyproject.toml
core/moshi/: __main__.py  base.py  chat.py  exceptions.py  listen.py  think.py
core/tests/: test_chat.py  test_speak.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: core.ts
hosting/: app.yaml
hosting/demo/: README
moshi/: .gcloudignore  CHANGELOG.md  GOOGLE_CLOUD.md  NOTES  README.md  TODO.md  _Procfile  __init__.py  app.yaml  audio.py  base.py  character.py  core.py  detector.py  gcloud.py  lang.py  main.py  pyproject.toml  requirements.txt  responder.py  server.py  speech.py  think.py  util.py
moshi/moshi/: __init__.py  __main__.py  base.py  chat.py  gcloud.py  lang.py  msg.py  speak.py  think.py  util.py
moshi/moshimoshi/: chat.py  lang.py  listen.py  think.py
moshi/server/: __init__.py  chat.py  util.py
moshi/server/audio/: __init__.py  detector.py  util.py
moshi/server/web/: style.css
moshi/tests/: conftest.py  test_chat.py  test_lang.py  test_listen.py  test_speak.py  test_think.py
moshi/web/: login.html  style.css
moshi/web/resources/: index.html  login.html  style.css
moshi/web/static/: client.js
moshimoshi/: __init__.py  __main__.py  base.py  chat.py  conversation.py  core.py  lang.py  listen.py  main.py  speak.py  speech2text.py  text2speech.py  think.py  util.py
notes/: CHANGELOG.md
notes/issues/http-headers/: SUMMARY  drafted.py  working.py
notes/issues/http-headers/scripts/: demo_aiohttp_session.py  demo_aiohttp_session_2.py
notes/moshi-3/: SETUP.md
notes/new/: CHANGELOG.md  NOTES.md
notes/old/: TODO.md
notes/runbooks/: GOODLE_CD.md  GOODLE_DOMAIN.md  GOOGLE_AUTH.md  GOOGLE_CLOUD.md  GOOGLE_COMPUTE.md  GOOGLE_NETWORK.md  GOOGLE_STORAGE.md  METERED_TURN_SERVER.md
ops/: .gitignore  README.md  create_python_vm_image.sh  entrypoint.sh  install.sh  install_moshi_vm.sh  new_project_setup.sh  notes.md  setup.sh
ops/artifacts/: README.md  entrypoint.sh
ops/packer/: debian11-python3.pkr.hcl  hello.pkr.hcl  moshi-server.pkr.hcl
ops/packer/artifacts/: entrypoint.sh  entrypoint_as_moshi.sh  pip.conf  pypirc
ops/packer/scripts/: README.md  install_moshi.sh  install_moshi_as_moshi.sh  install_pyenv.sh  install_python3.sh
ops/scripts/: README.md  create_python_repo.sh  get_access_token_for_gha.sh  get_gcp_pypi_config.sh  new_project_setup.sh
ops/terraform/: terraform.tfstate
ops/terraform/apis/: main.tf  terraform.tfstate
ops/terraform/github/: oidc.tf  service-account.tf  terraform.tfstate
ops/terraform/ipv4/: main.tf  terraform.tfstate
ops/terraform/packer/: service-account.tf
ops/terraform/pypi/: main.tf  terraform.tfstate
ops/terraform/server/: .terraform.tfstate.lock.info  main.tf  storage.tf  terraform.tfstate
ops/terraform/sslcert/: main.tf  terraform.tfstate
ops/terraform/storage/: main.tf  terraform.tfstate
planning/: design_a_course.txt
scripts/: add_authorized_users.py  bump_version.sh  init_firestore.py  make_api_key.py
server/: .gitignore  CHANGELOG.md  NOTES.md  README.md  TODO.md  pyproject.toml
server/server/: __init__.py  audio.py  base.py  chat.py  client.js  demo_make_audio_frame.py  demo_stream.py  index.html  lang.py  main.py  rtc.py  speak.py  speech.py  style.css  util.py
server/server/audio/: core.py  detector.py  responder.py  util.py
server/server/css/: style.css
server/server/static/: demo_audio_recognition.js  demo_audio_stream.js  demo_log_stream.js  demo_stream.js
server/server/templates/: demo_audio_recognition.html  demo_rtc.html  demo_stream.html  demo_stream_mic.html  index.html
server/server/web/: index.html
server/tests/: conftest.py  test_audio.py  test_audio_util.py  test_chat.py  test_detector.py  test_fixtures.py  test_lang.py  test_responder.py  test_speech.py
src/moshi/: __init__.py  api.py  audio.py  auth.py  base.py  core.py  detector.py  exceptions.py  gcloud.py  ice.py  lang.py  responder.py  secrets.py  server.py  server_util.py  speech.py  think.py  turn.py  util.py
src/moshi/activities/: __init__.py  core.py
src/moshi/activities/kinds/: unstructured.py
src/moshi/api/: auth.py  core.py
src/moshi/api/routes/: auth.py  convos.py  offer.py
src/moshi/call/: __init__.py  core.py  detector.py  responder.py  speech.py  think.py  webrtc.py
src/moshi/chat/: chatter.py  core.py  detector.py  responder.py  speech.py  think.py
src/moshi/core/: activities.py  auth.py  base.py  character.py  config.py  gcloud.py  secrets.py  storage.py
src/moshi/monolith_server/routes/: index.py  login.py  offer.py
src/moshi/server/: __init__.py  api.py  auth.py  core.py  util.py
src/moshi/static/: client.js  style.css
src/moshi/templates/: index.html  login.html  news.html  privacy.html  wrapper.html
src/moshi/utils/: __init__.py  audio.py  config.py  ctx.py  gcloud.py  lang.py  log.py  secrets.py  speech.py  storage.py  think.py  user.py
tests/: README.md  conftest.py  test_activities.py  test_api.py  test_audio.py  test_audio_util.py  test_auth.py  test_chat.py  test_core.py  test_detector.py  test_fixtures.py  test_gcloud.py  test_ice.py  test_lang.py  test_listen.py  test_responder.py  test_routes.py  test_secrets.py  test_server.py  test_speak.py  test_speech.py  test_speech2test.py  test_text2speech.py  test_think.py  test_webrtc_adapter.py
tests/resources/: test_audio.m4a
ui/: NOTES.md  README.md  package-lock.json  package.json  pyproject.toml
ui/elm/src/: Main.elm
ui/server/: main.py
ui/server/static/: core.ts  test.html  tsconfig.json
ui/server/templates/: index.html
ui/ui/: __init__.py
(+16 files in other folders)
