[project]
name = "moshi"
version = "23.7.0"
description = "Moshi is a spoken language tutor."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Proprietary"}
keywords = ["language", "ai", "moshi"]
authors = [
  {name = "Eric Kalosa-Kenyon", email = "moshi.feedback@gmail.com"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Communications",
  "Topic :: Education",
]
dependencies = [
  "aiortc",
  "aiohttp_session",
  "av",
  "google-auth",
  "google-cloud-firestore",
  "google-cloud-logging",
  "google-cloud-translate",
  "google-cloud-texttospeech",
  "google-cloud-secret-manager",
  "jinja2",
  "loguru",
  "numpy",
  "openai",
  "pyfiglet",
]

[project.optional-dependencies]
server = [
  'gunicorn',
]
tests = [
  'pytest',
  'pytest-asyncio',
  'pytest-aiohttp',
  'pytest-cov',
  'scipy',
]
dev = [
  'black',
  'flake8',
  'isort',
]

[project.urls]
Homepage = "https://github.com/ekalosak/moshi/tree/main"
Repository = "https://github.com/ekalosak/moshi.git"

[tool.pytest.ini_options]
markers = [
  "slow: runs more than a second or two to run",
  "openai: access to the _paid_ OpenAI APIs",
  "gcloud: access to the _paid_ Google Cloud APIs",
  "metered: access to the _paid_ Metered.ca TURN server",
  "asyncio: uses async and await"
]
# addopts = [
#   "--cov=moshi"
# ]

