# https://stackoverflow.com/questions/54260307/change-egg-info-directory-with-pip-install-editable
[egg_info]
egg_base = build

# https://flake8.pycqa.org/en/3.1.1/user/configuration.html
[flake8]
ignore = E501

[options]
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
moshi.templates =
    *.html
moshi.static =
  *.js
  *.css
  *.ico
