[project]
name = "moshi"
version = "23.6.0"
description = "Have a conversation in a new language, at your level."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["language", "ai", "moshi"]
authors = [
  {name = "Eric Kalosa-Kenyon", email = "helloateric@gmail.com"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Communications",
  "Topic :: Education",
]
dependencies = [
  "google-cloud-translate",
  "google-cloud-texttospeech",
  "loguru",
  "openai",
  "pyaudio",
  "pyfiglet",
  "SpeechRecognition",
]

[project.optional-dependencies]
tests = [
  'pytest',
  # 'pytest-benchmark[histogram]>=3.2.1',
]
dev = [
  'black',
  'flake8',
  'isort',
]

[project.urls]
Homepage = "https://github.com/ekalosak/moshi/tree/main"
Repository = "https://github.com/ekalosak/moshi.git"

[tool.setuptools]
packages = ["moshi"]

[tool.pytest.ini_options]
markers = [
  "openai: marks tests as requiring openai queries",
  "speak: marks tests as requiring access to a speaker",
]
