[project]
name = "moshi-server"
version = "23.6.2"
description = "Web browser user interface for Moshi."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Proprietary"}
keywords = ["language", "ai", "moshi"]
authors = [
  {name = "Eric Kalosa-Kenyon", email = "helloateric@gmail.com"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Communications",
  "Topic :: Education",
]
dependencies = [
  "flask",
  "flask-socketio",
  "gevent",
  "gunicorn",
  "loguru",
  "pyaudio",
  "moshi"
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-asyncio',
  'scipy',
]
dev = [
  'black',
  'flake8',
  'isort',
]

[project.urls]
Homepage = "https://github.com/ekalosak/moshi/tree/main"
Repository = "https://github.com/ekalosak/moshi.git"

[tool.setuptools]
packages = ["server"]

[tool.pytest.ini_options]
markers = [
  "speak: marks tests as requiring access to a speaker",
  "slow: marks tests as requiring more than a second or two to run",
  "openai: marks tests as requiring access to the _paid_ OpenAI models API",
]
